spacing fixes, removed deprecated styles

--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,6 @@ nav, article, header {
 
 body {
 	background: #E5E5E5;
-	overflow-x: hidden;
 }
 
 #background_menu_line {
@@ -39,6 +38,7 @@ body {
 header {
 	position: relative;
 	height: 45px;
+	margin-bottom: 20px;
 }
 
 #logo {
@@ -91,64 +91,9 @@ header {
 #content.focus-4 .dummy { margin-left: -300% }
 #content.focus-5 .dummy { margin-left: -400% }
 
-#content > .page
-{
-	display: inline-block;
-	width: 100%;
-	min-height: 400px;
-	vertical-align: top;
-
-	-webkit-transition-property: margin-left, opacity, height;
-	-webkit-transition-duration: 0.3s;
-	-moz-transition-property: margin-left, opacity, height;
-	-moz-transition-duration: 0.3s;
-	-ms-transition-property: margin-left, opacity, height;
-	-ms-transition-duration: 0.3s;
-	-o-transition-property: margin-left, opacity, height;
-	-ot-transition-duration: 0.3s;
-	transition-property: margin-left, opacity, height;
-	transition-duration: 0.3s;
-}
-
-#content > .dummy
-{
-	width: 0;
-}
-
-#content > .page.inactive
-{
-	opacity: 0.2;
-}
-
-#content > .page.inactive > h1
-{
-	opacity: 0;
-}
-
-#content > .page > h1
-{
-	white-space: normal;
-	line-height: 1.2em;
-	text-align: right;
-	text-transform: lowercase;
-	position: absolute;
-	font-size: 59px;
-	top: -110px;
-	right: 20px;
-	left: 300px;
-	font-weight: normal;
-	font-family: Orbitron, Verdana, sans-serif;
-	color: #7F2626;
-	-webkit-transition: opacity 0.3s;
-}
-
-#content > .page > h1.long {
-	font-size: 30px;
-	left: 420px;
-}
-
 #content li {
-	margin-left: 30px;
+	list-style-type: square;
+	margin-left: 12px;
 }
 
 sd-post {
@@ -173,6 +118,10 @@ sd-post article {
 	margin: 10px 0px;
 	text-align: left;
 	position: relative;
+}
+
+sd-post:first-child h1:first-child {
+	margin-top: 0px;
 }
 
 sd-post h1 {
